--- a/mRNAdegradation2024/readme
+++ b/mRNAdegradation2024/readme
@@ -1,1 +1,1 @@
-This folder contains matlab code used to analyze microscopy data in Troyer et al. 2025.
+This folder contains analysis code used in Kim et al on mRNA degradation in bacteria.
