Update readme with project details and FISH analysis
Added sections about the analysis code and FISH analysis.

--- a/mRNAdegradation2024/readme
+++ b/mRNAdegradation2024/readme
@@ -1,1 +1,11 @@
+## About
 This folder contains analysis code used in Kim et al on mRNA degradation in bacteria.
+
+## FISH analysis
+We provide three versions of FISH analysis code, depending on the need.
+
+- 'FISHanalysis2' folder contains an example dataset to test plotting. The scripts were lightly modified to use these data files accordingly.
+- 'FISHanalysis' folder is the original version without an example data set. This contains two additial script files that are used to 1) prepare raw files for oufti & uTrack analysis and 2) combine multiple analysis results, respectively
+- A more complete workflow from handling raw image files can be found in 'FISH2025'.
+
+## 
